<?xml version="1.0"?>
<package format="2">
  <name>dmapping_refinement</name>
  <version>0.0.0</version>
  <license>daniel adolfsson do not use without concent</license>

  <description>The dmapping_refinement package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <build_depend>tf_conversions</build_depend>
  <exec_depend>tf_conversions</exec_depend>
  <build_depend>eigen_conversions</build_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <build_depend>floam</build_depend>
  <exec_depend>floam</exec_depend>
  
  <build_depend>lio_sam</build_depend>
  <exec_depend>lio_sam</exec_depend>
  
</package>
